--- a/IocDipUnityMvc.csproj
+++ b/IocDipUnityMvc.csproj
@@ -1,14 +1,15 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
-
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <Content Include="Controllers\HomeController.cs" />
+    <PackageReference Include="Unity" Version="5.11.10" />
+    <Content Include="Startup.cs" />
+    <PackageReference Include="Unity.NetCore" Version="4.0.3" />
   </ItemGroup>
-
 </Project>
